# computer-vision-benchmarks

./: .gitignore  README.md  pyproject.toml
compvis/activations/: relu.py
compvis/blocks/: densenet_block.py  feed_forward_block.py  resnet_block.py
compvis/embedding/: patch_embedding.py
compvis/layers/: batch_norm.py  conv_2d.py  dropout.py  stochastic_depth.py  transformer_encoder.py
compvis/models/: densenet.py  densetnet_old.py  resnet.py  resnet_old.py  vision_transformer.py
